# llm.c

./: .gitignore  CMakeLists.txt  build_msvc.bat  test_gpt2.c  train_gpt2.c  train_gpt2.ps1  win.h
